--- a/bluetooth-audio-server/readme.adoc
+++ b/bluetooth-audio-server/readme.adoc
@@ -4,7 +4,7 @@
 
 ## dsh to install or update on multiple pis:
 ....
-dsh --remoteshell ssh --remoteshellopt '-o UserKnownHostsFile=/dev/null' --remoteshellopt '-o StrictHostKeyChecking=no' --remoteshellopt '-o LogLevel=ERROR' --concurrent-shell --show-machine-names --machine pi@study.local,pi@pifi.local,pi@piwall10.local,pi@kitchen.local,pi@bedroom.local 'NAME="pi %h"; [[ $(hostname) == pi* ]] && NAME=$(hostname | sed "s/[0-9]\+$//") ; cd /home/pi/development/pitools && git pull && /home/pi/development/pitools/bluetooth-audio-server/install_or_update_bluetooth_audio_server.sh -d /home/pi/development -n "$NAME" ; dsh --remoteshell ssh --remoteshellopt '-o UserKnownHostsFile=/dev/null' --remoteshellopt '-o StrictHostKeyChecking=no' --remoteshellopt '-o LogLevel=ERROR' --concurrent-shell --show-machine-names --machine pi@study.local,pi@pifi.local,pi@piwall10.local,pi@kitchen.local,pi@bedroom.local 'sudo systemctl status bt-speaker.service'
+dsh --remoteshell ssh --remoteshellopt '-o UserKnownHostsFile=/dev/null' --remoteshellopt '-o StrictHostKeyChecking=no' --remoteshellopt '-o LogLevel=ERROR' --concurrent-shell --show-machine-names --machine pi@study.local,pi@pifi.local,pi@piwall10.local,pi@kitchen.local,pi@bedroom.local 'NAME="pi %h"; [[ $(hostname) == pi* ]] && NAME=$(hostname | sed "s/[0-9]\+$//") ; cd /home/pi/development/pitools && git pull && /home/pi/development/pitools/bluetooth-audio-server/install_or_update_bluetooth_audio_server.sh -d /home/pi/development -n "$NAME"' ; dsh --remoteshell ssh --remoteshellopt '-o UserKnownHostsFile=/dev/null' --remoteshellopt '-o StrictHostKeyChecking=no' --remoteshellopt '-o LogLevel=ERROR' --concurrent-shell --show-machine-names --machine pi@study.local,pi@pifi.local,pi@piwall10.local,pi@kitchen.local,pi@bedroom.local 'sudo systemctl status bt-speaker.service'
 ....
 
 ## connecting
