--- a/observability/README.adoc
+++ b/observability/README.adoc
@@ -1,9 +1,9 @@
 # Observability
 
 ## Summary
-1. Install node_exporter on all pis
-1. install grafana and prometheus on one host: study.local
-1. Access grafana at http://study.local:3000
+. Install node_exporter on all pis
+. install grafana and prometheus on one host: study.local
+. Access grafana at http://study.local:3000
 
 ## node_exporter dsh install command
 ....
@@ -11,13 +11,13 @@ dsh --remoteshell ssh --remoteshellopt '-o UserKnownHostsFile=/dev/null' --remot
 ....
 
 ## Grafana configuration
-1. Set username and password to admin / admin on first login : http://study.local:3000
-1. Add prometheus datasource http://study.local:3000/connections/datasources :
-    1. HTTP > Prometheus server URL: `http://localhost:9090`
-    1. Interval behaviour > Scrape interval: `10s`
-    1. Performance > Prometheus type: `Prometheus`
-1. Add "Node Exporter Full"[https://grafana.com/grafana/dashboards/1860-node-exporter-full/] dashboard http://study.local:3000/dashboard/import :
-    1. Import via grafana.com: `1860` (this is the dashboard ID)
+. Set username and password to admin / admin on first login : http://study.local:3000
+. Add prometheus datasource http://study.local:3000/connections/datasources :
+.. HTTP > Prometheus server URL: `http://localhost:9090`
+.. Interval behaviour > Scrape interval: `10s`
+.. Performance > Prometheus type: `Prometheus`
+. Add "Node Exporter Full[https://grafana.com/grafana/dashboards/1860-node-exporter-full/]" dashboard http://study.local:3000/dashboard/import :
+.. Import via grafana.com: `1860` (this is the dashboard ID)
 
 ## Files used
 The grafana DB is a sqlite file: `sudo sqlite3 /var/lib/grafana/grafana.db`
