--- a/observability/README.adoc
+++ b/observability/README.adoc
@@ -31,3 +31,10 @@ dsh --remoteshell ssh --remoteshellopt '-o UserKnownHostsFile=/dev/null' --remot
 The grafana DB is a sqlite file: `sudo sqlite3 /var/lib/grafana/grafana.db`
 
 Prometheus stores data at the path specified by the `--storage.tsdb.path` flag.
+
+## Backup grafana data
+It's a good idea to back up your dashboards data periodically. Currently the process is manual. Dashboards data includes the json that defines the dashboard. It does NOT include the prometheus time series DB.
+....
+ssh pi@study.local 'sudo chmod a+r /var/lib/grafana/grafana.db' && scp pi@study.local:/var/lib/grafana/grafana.db ~/Downloads
+....
+Upload it here: https://drive.google.com/drive/u/0/folders/1ykL8-Zm2OvSODugE2xQGHNE5xXOhoz8o
