--- a/sensors/readme.adoc
+++ b/sensors/readme.adoc
@@ -10,14 +10,14 @@ dsh --remoteshell ssh --remoteshellopt '-o UserKnownHostsFile=/dev/null' --remot
 ## AQI calculations
 Prometheus query to convert pm2.5 to AQI:
 ....
-((50 - 0) / (12 - 0) * ((avg_over_time(ambient_pm25_env{instance=~"$room.*"}[$aqi_interval]) <= 12) - 0) + 0) or
-((100 - 51) / (35.4 - 12.1) * ((avg_over_time(ambient_pm25_env{instance=~"$room.*"}[$aqi_interval]) <= 35.4) - 12.1) + 51) or
-((150 - 101) / (55.4 - 35.5) * ((avg_over_time(ambient_pm25_env{instance=~"$room.*"}[$aqi_interval]) <= 55.4) - 35.5) + 101) or
-((200 - 151) / (150.4 - 55.5) * ((avg_over_time(ambient_pm25_env{instance=~"$room.*"}[$aqi_interval]) <= 150.4) - 55.5) + 151) or
-((300 - 201) / (250.4 - 150.5) * ((avg_over_time(ambient_pm25_env{instance=~"$room.*"}[$aqi_interval]) <= 250.4) - 150.5) + 201) or
-((400 - 301) / (350.4 - 250.5) * ((avg_over_time(ambient_pm25_env{instance=~"$room.*"}[$aqi_interval]) <= 350.4) - 250.5) + 301) or
-((500 - 401) / (500.4 - 350.5) * ((avg_over_time(ambient_pm25_env{instance=~"$room.*"}[$aqi_interval]) <= 500.4) - 350.5) + 401) or
-clamp_max(avg_over_time(ambient_pm25_env{instance=~"$room.*"}[$aqi_interval]), 600)
+((50 - 0) / (12 - 0) * ((avg_over_time(ambient_pm25_env{instance=~"$room"}[$aqi_interval]) <= 12) - 0) + 0) or
+((100 - 51) / (35.4 - 12.1) * ((avg_over_time(ambient_pm25_env{instance=~"$room"}[$aqi_interval]) <= 35.4) - 12.1) + 51) or
+((150 - 101) / (55.4 - 35.5) * ((avg_over_time(ambient_pm25_env{instance=~"$room"}[$aqi_interval]) <= 55.4) - 35.5) + 101) or
+((200 - 151) / (150.4 - 55.5) * ((avg_over_time(ambient_pm25_env{instance=~"$room"}[$aqi_interval]) <= 150.4) - 55.5) + 151) or
+((300 - 201) / (250.4 - 150.5) * ((avg_over_time(ambient_pm25_env{instance=~"$room"}[$aqi_interval]) <= 250.4) - 150.5) + 201) or
+((400 - 301) / (350.4 - 250.5) * ((avg_over_time(ambient_pm25_env{instance=~"$room"}[$aqi_interval]) <= 350.4) - 250.5) + 301) or
+((500 - 401) / (500.4 - 350.5) * ((avg_over_time(ambient_pm25_env{instance=~"$room"}[$aqi_interval]) <= 500.4) - 350.5) + 401) or
+clamp_max(avg_over_time(ambient_pm25_env{instance=~"$room"}[$aqi_interval]), 600)
 ....
 
 It's based off of this formula:
