--- a/sensors/readme.adoc
+++ b/sensors/readme.adoc
@@ -36,3 +36,9 @@ See
 
 1. https://en.wikipedia.org/wiki/Air_quality_index#Computing_the_AQI
 1. https://www.airnow.gov/sites/default/files/2020-05/aqi-technical-assistance-document-sept2018.pdf
+
+## Sensor wiring
+
+image::img/sensor_wiring1.jpg[]
+
+image::img/sensor_wiring2.jpg[]
