--- a/shairport-sync/readme.adoc
+++ b/shairport-sync/readme.adoc
@@ -33,8 +33,10 @@ I had a recurrence of this issue. I restarted all piwall raspberry pis (all 11 o
 
 https://gist.github.com/dasl-/5dc1eb846a65f75550e45e3a5538f094[Here are the logs]. The client was my iPhone playing from the Music app from my local file library. Lots of messages like this: `Dropping out of date packet 47609 with timestamp 3806330070. Lead time is -0.448617 seconds.`
 
-Next time this happens, run this command to restart all piwall raspberry pis, which should fix it:
+*Next time this happens, run this command* to restart all piwall raspberry pis, which should fix it:
 
 ....
 dsh -r ssh -c -M -m pi@piwall.local,pi@piwall1.local,pi@piwall2.local,pi@piwall3.local,pi@piwall4.local,pi@piwall5.local,pi@piwall6.local,pi@piwall7.local,pi@piwall8.local,pi@piwall9.local,pi@piwall10.local "sudo shutdown -r now" 2>/dev/null
 ....
+
+I can confirm the issue and the fix by restarting the broadcaster process to trigger new screensaver runs.
